tests/baselines/reference/u-invalid-oob-decimal-escape.errors.txt
u-invalid-oob-decimal-escape.ts(19,3): error TS1532: Decimal escapes are invalid when there are no capturing groups in a regular expression.
u-invalid-oob-decimal-escape.ts(19,5): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== u-invalid-oob-decimal-escape.ts (2 errors) ====
    // Copyright (C) 2016 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-pattern-semantics
    es6id: 21.2.2
    description: Out-of-bounds decimal escapes
    info: |
        1. Evaluate DecimalEscape to obtain an integer n.
        2. If n>NcapturingParens, throw a SyntaxError exception.
    
        When the "unicode" flag is set, this algorithm is honored irrespective of
        the presence of Annex B extensions.
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /\8/u;
      ~
!!! error TS1532: Decimal escapes are invalid when there are no capturing groups in a regular expression.
        ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    